tests/integration/errors/test_interceptor_wrong_param_count.sn
# Error test: interceptor handler with wrong parameter count

fn badHandler(x: int): int =>
    return x

fn main(): void =>
    Interceptor.register(badHandler)
